# citro3d-rs

./: .gitignore  Cargo.toml  README.md  bacon.toml
citro2d/: Cargo.toml
citro2d-sys/: Cargo.toml  build.rs
citro2d/examples/: 2d_shapes.rs  breakout.rs  system_font.rs
citro2d/src/: error.rs  lib.rs  render.rs  shapes.rs  text.rs
citro3d/: Cargo.toml
