[workspace]
members = ["citro3d", "citro3d-sys", "citro3d-macros", "citro2d-sys"]
default-members = ["citro3d", "citro3d-sys", "citro3d-macros", "citro2d-sys"]
resolver = "2"

[patch."https://github.com/rust3ds/citro3d-rs.git"]
citro3d = { path = "citro3d" }
citro3d-sys = { path = "citro3d-sys" }
citro3d-macros = { path = "citro3d-macros" }
