[workspace]
members = ["citro3d", "citro3d-sys", "citro3d-macros", "citro2d-sys", "citro2d"]
default-members = [
    "citro3d",
    "citro3d-sys",
    "citro3d-macros",
    "citro2d-sys",
    "citro2d",
]
resolver = "2"

#TODO change back to rust3ds
[patch."https://github.com/fatfingers23/citro3d-rs"]
citro3d = { path = "citro3d" }
citro3d-sys = { path = "citro3d-sys" }
citro3d-macros = { path = "citro3d-macros" }
citro2d-sys = { path = "citro2d-sys" }
citro2d = { path = "citro2d" }
